Bug 66228 - FILESAVE: save to PPTX changes connector style
Summary: FILESAVE: save to PPTX changes connector style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: BSA target:7.4.0
Keywords: filter:pptx
Depends on:
Blocks: Connectors PPTX-Shapes
  Show dependency treegraph
 
Reported: 2013-06-26 21:24 UTC by tom.hilinski
Modified: 2022-05-30 08:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
The otp file as described in the report. (11.56 KB, application/vnd.oasis.opendocument.presentation-template)
2013-06-26 21:24 UTC, tom.hilinski
Details
PPTX created from "file save as", as described. (31.94 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2013-06-26 21:27 UTC, tom.hilinski
Details
Snapshot of both files open in LO with default style dialog. (97.83 KB, image/png)
2013-06-26 21:36 UTC, tom.hilinski
Details
Screenshot of the original document and its PPTX version in Impress (73.98 KB, image/png)
2021-01-29 07:20 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tom.hilinski 2013-06-26 21:24:57 UTC
Created attachment 81512 [details]
The otp file as described in the report.

Problem description: 
The attached odp file was created in this version of LO. This problem could be in either of these actions:
(1) saving to a PPTX file,
(2) opening a PPTX file in LO.

The "default" style has the font size = 12 pt. There are 2 columns of boxes w/text set to the default style.

When saved to a PPTX file, then when that file is opened in LL, the font of the boxes in the right column are 18 pt, while the left column is the correct 12 pt.

Expected behavior:
The correct 12pt font size is used in the PPTX.

An additional issue: The rightmost connector is changed in the PPTX from an angled connector to a straight connector.
              
Operating System: openSUSE
Version: 4.0.4.2 release
Comment 1 tom.hilinski 2013-06-26 21:27:14 UTC
Created attachment 81513 [details]
PPTX created from "file save as", as described.
Comment 2 tom.hilinski 2013-06-26 21:36:14 UTC
Created attachment 81514 [details]
Snapshot of both files open in LO with default style dialog.
Comment 3 Thomas van der Meulen [retired] 2013-07-03 05:53:19 UTC
Thank you for your bug report, I can reproduce this bug running Version: 4.2.0.0.alpha0+
Build ID: 9ab800829b8a0e44824dc11276b54b1870bc5b2b (30 jun 2013) on Mac osx 10.8.4.
Comment 4 tommy27 2014-02-15 14:32:36 UTC
(In reply to comment #0)
> ...
> 
> When saved to a PPTX file, then when that file is opened in LL, the font of
> the boxes in the right column are 18 pt, while the left column is the
> correct 12 pt.
> 
> Expected behavior:
> The correct 12pt font size is used in the PPTX.

still reproducible in 4.2.0.4
in 4.3.0alpha+ there's no font size change (see Bug 73627)
so this part of the issue is fixed in master

> An additional issue: The rightmost connector is changed in the PPTX from an
> angled connector to a straight connector.

this issue persists either in 4.2.0.4 and 4.3.0alpha+ so I change summary notes
          
> Operating System: openSUSE
> Version: 4.0.4.2 release

tested under Win7 64bit
Comment 5 Joel Madero 2015-05-02 15:43:43 UTC Comment hidden (obsolete)
Comment 6 Yogesh Bharate 2015-05-07 05:51:30 UTC
Now the default font size properly exported.

Priyanka Gaikwad Proposd a changed related to the default font size.

Link : https://gerrit.libreoffice.org/gitweb?p=core.git;a=commitdiff;h=0d341d28

Build id :
Version: 5.0.0.0.alpha1+
Build ID: 36c8dd27b19ce5088b65096af5f464ec5720efaa
Locale: en-IN (en_IN)

Note: Connector style still changed.
Comment 7 Xisco Faulí 2016-04-27 12:10:56 UTC
This issue is still reproducible in

Version: 5.2.0.0.alpha1+
Build ID: e7f55f15ccd97bc92e1400bc5862171a621da3e2
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-27_00:29:05
Locale: es-ES (es_ES)
Comment 8 tom.hilinski 2016-04-27 12:40:41 UTC
For LO Version: 5.1.2.2.0+
Build ID: 10m0(Build:2)
CPU Threads: 8; OS Version: Linux 4.1; UI Render: default; 
Locale: en-US (en_US.UTF-8)

Confirm that the following still occurs:

The rightmost connector is changed in the PPTX from an angled connector to a straight connector.

The font issue seems to have been fixed, though the properties box seems confused as to which font and size is in a box -- try clicking text in different boxes, and the font size is either 12 or 18 according to Properties, though they all look the same.
Comment 9 QA Administrators 2017-05-22 13:26:19 UTC Comment hidden (obsolete)
Comment 10 Xisco Faulí 2017-10-19 15:23:46 UTC
Still reproducible in

Version: 6.0.0.0.alpha0+
Build ID: cfbb8b5090537e79ba70e250ddee86d53facbe15
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 11 QA Administrators 2018-10-20 02:53:12 UTC Comment hidden (obsolete)
Comment 12 Roman Kuznetsov 2019-01-05 13:52:41 UTC
still repro in

Version: 6.2.0.1
Build ID: 0412ee99e862f384c1106d0841a950c4cfaa9df1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 13 Buovjaga 2019-09-25 14:35:51 UTC
Repro already in 3.3.0 (connector disappears completely)
Comment 14 NISZ LibreOffice Team 2021-01-29 07:20:21 UTC
Created attachment 169255 [details]
Screenshot of the original document and its PPTX version in Impress

Still a problem in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7eb289c49cc7245ef3001a39be0c15d06bbe875b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 15 Commit Notification 2022-05-23 09:00:12 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4efaf455136c3a0db8dfd3f1afc0db827192147

tdf#66228 PPTX export: fix lost U-shaped connectors

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 NISZ LibreOffice Team 2022-05-30 08:56:17 UTC
The connector shape does not change after save pptx and reload it so this is confirmed.

But when I appoint the text box the character type is "Liberation Sans" and size "18 pt". 
Otherwise when I click in the text box the character type is "Arial" and size "12 pt".
When the text box is highlighted and start writing the Style and size the same as when you click in the text box.


Verified in: 

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 212cb61fb6adc05395b9f9afe0dacbd6594ae06b
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL